--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "5.10.2",
+    "@supabase/supabase-js": "^2.41.1",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
